2007-05-16  Piotr Fusik  <fox@scene.pl>
* java/ASAPApplet.java: fixed paint() and called repaint()

* asap_internal.h, asap.c, java/ASAP.ppjava, java/Makefile,
  java/MIDLET_MANIFEST.MF: native Atari formats now supported by the Java
  version


2007-05-15  Piotr Fusik  <fox@scene.pl>
* java/ASAPApplet.java, java/Makefile: support "song", "defaultPlaybackTime",
  "loopPlaybackTime" and "onPlaybackEnd" parameters and play() and stop()
  methods


2007-05-13  Piotr Fusik  <fox@scene.pl>
* acpu.c, apokeysnd.c, asap.c, asap.h, asap_internal.h, java/ASAP.ppjava
  - ASAP_State.cycle is now real cycle rather than 6502 cycle

* asap.c: 6502 flag I is initially cleared - Digital_Trash.sap works

* java/ASAPApplet.java: read() may return before end of file, so call it
  repeatedly


2007-05-12  Piotr Fusik  <fox@scene.pl>
* asap.c: fixed ASAP_Seek() that incorrectly used sample_offset instead
  of sample_index

* asap.h: corrections in comments

* java/Makefile, win32/Makefile: created separate Makefile for Java

* java/ASAP.ppjava, java/ASAP_ModuleInfo.java: javadoc comments

* java/ASAPMIDlet.java, java/MIDLET_MANIFEST.MF, java/mf2jad.pl, java/Makefile:
  started coding a midlet - implemented a file selector

* asap2wav.1: updated

* xmms/libasap.c: fixed compilation errors


2007-05-11  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: increased precision of IIR

* acpu.c, apokeysnd.c, asap.c, asap.h, asap_internal.h, java/ASAP.ppjava,
  java/ASAP_ModuleInfo.java, java/ASAP2WAV.java, win32/Makefile:
  ASAP can be compiled as pure Java!

* java/ASAPApplet.java, win32/Makefile: simple Java applet


2007-05-10  Piotr Fusik  <fox@scene.pl>
* acpu.c, acpu.h, apokeysnd.c, apokeysnd.h, asap.c, asap.h, asap_internal.h,
  asap2wav.c, configure.ac, config.guess, config.sub, Makefile.in,
  gsplayer/gspasap.c, win32/Makefile, win32/settings.c, win32/settings.h,
  win32/foobar2000/foo_asap.cpp, win32/winamp/in_asap.c,
  win32/wasap/wasap.c, win32/wasap/wasap.rc, win32/wasap/resource.h,